# scard-tester

./: CMakeLists.txt  LICENSE  README.md  main.cpp
